message Packet { 
	  required string host = 1;
	  required int32 port = 2;
	  required int32 termId = 3;
	  optional int32 logEntry = 4;
	  optional int32 commitIndex=5;
	  required Type messageType = 6;
	  optional Vote vote=7;
	  optional string data = 8;
	  optional string clientResponse=9;
	  optional Functionalities functionalities = 10;
	  optional Details details = 11;
	  optional RequestType requestType = 12;


	enum Type{
	    HEARTBEAT = 0;
	    ELECTION = 1;
	    DATA = 2;
	  	UPDATE = 3;
	  	CLIENTREQUEST=4;
	  	COMMITREQUEST=5;
	}

	enum Vote{
	    GRANTED = 1;
	    DENIED = 2;
	}

	enum RequestType {
		GET = 0;
		POST = 1;
	}

	enum Functionalities {
		GETUSER = 1;
		GETCOURSEDESCRIPTION = 2;
		ADDUSER = 3;
		ADDCOURSE = 4;
		ADDCOURSETOUSER = 5;
	}

	message Details {
		optional int32 user_id = 1;
		optional string username = 2;
		optional string course_id = 3;
		optional string course_name = 4;
		optional string course_description = 5;
	}
}